# ti4-rules-engine

./: .gitignore  .gitmodules  =24.0  LICENSE  README.md  pyproject.toml
.github/workflows/: analyze-game.yml  pr-unit-tests.yml  publish.yml
adapters/: __init__.py  asyncti4.py
data/: leaders.json  objectives.json
docs/: contributing.md  implementation.md
engine/: __init__.py  combat.py  history.py  movement.py  options.py  round_engine.py  scoring.py
models/: __init__.py  faction.py  map.py  objective.py  planet.py  state.py  technology.py  unit.py
registry/: __init__.py  component_registry.py  effect_registry.py
scripts/: analyze_game.py
scripts/data/: technologies.json
src/ti4_rules_engine/: __init__.py
src/ti4_rules_engine/adapters/: __init__.py  asyncti4.py
src/ti4_rules_engine/data/: hyperlanes.json  leaders.json
src/ti4_rules_engine/engine/: __init__.py  combat.py  history.py  movement.py  options.py  round_engine.py  scoring.py
src/ti4_rules_engine/models/: __init__.py  card.py  faction.py  objective.py  state.py
src/ti4_rules_engine/registry/: __init__.py  component_registry.py
src/ti4_rules_engine/scripts/: _data_loaders.py  _data_paths.py  _fleet_movement.py  _hex_grid.py  _hyperlanes.py  _map_display.py  _tile_catalog.py  analyze_game.py  analyze_game_core.py
src/ti4_rules_engine/utils/: __init__.py  asset_mapping.py
tests/: conftest.py  test_analyze_game.py  test_asyncti4_adapter.py  test_combat.py  test_data_loader_hard_errors.py  test_data_paths.py  test_engine.py  test_history.py  test_models.py  test_movement.py  test_options.py  test_phase_steps.py  test_registry.py  test_scoring.py  test_strategy_card_data_loaders.py  test_strategy_card_summary.py  test_utils.py
utils/: __init__.py
