[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ti4-rules-engine"
version = "0.1.5"
description = "A Pythonic, structured data engine for Twilight Imperium 4th Edition"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.0",
    "transitions>=0.9",
    "structlog>=24.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/ti4_rules_engine"]

[project.scripts]
ti4-analyze = "ti4_rules_engine.scripts.analyze_game:main"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
